// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with blocks updates positions when a block is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "index": 0,
          "name": "Block",
          "vx": -293.1125320534832,
          "vy": 0.000028033381886907253,
          "x": -294.1125320534832,
          "y": 0.000028033381886907253,
        },
        Object {
          "index": 1,
          "name": "New block",
          "vx": 293.1125320534832,
          "vy": 0.000028033381886907253,
          "x": 294.1125320534832,
          "y": 0.000028033381886907253,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;

exports[`without blocks updates position when a block is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "index": 0,
          "name": "New block",
          "vx": -0.058634233257348636,
          "vy": 0,
          "x": 0.9413657667426514,
          "y": 0,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;
